Improve settings view style - Open the view with collapsed modules by default - Fix #15 since all modules are now visible at once

--- a/src/views/settings-view.module.css
+++ b/src/views/settings-view.module.css
@@ -1,45 +1,54 @@
 .settingsHeader {
-  display: flex;
-  -webkit-app-region: drag;
-  padding: 1rem 2rem;
-  background-color: var(--background-2);
+    display: flex;
+    -webkit-app-region: drag;
+    padding: 1rem 2rem;
+    background-color: var(--background-2);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.settingsHeader + .settingsBody {
+    padding-top: 130px;
 }
 
 .settingsBody {
-  max-width: 800px;
-  padding: 2rem;
-  margin: auto;
-  --space: 1.2rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+    max-width: 800px;
+    padding: 2rem;
+    margin: auto;
+    --space: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .settingsBody > * {
-  margin-top: 0;
-  margin-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .settingsBody > * + * {
-  margin-top: var(--space);
+    margin-top: var(--space);
 }
 
 .shortcut {
-  font-family: auto;
-  display: inline-block;
-  padding: 2px 5px;
-  font-size: 14px;
-  color: #444d56;
-  vertical-align: middle;
-  background-color: #fafbfc;
-  border: 1px solid #d1d5da;
-  border-radius: 3px;
-  box-shadow: inset 0 -1px 0 #d1d5da;
+    font-family: auto;
+    display: inline-block;
+    padding: 2px 5px;
+    font-size: 14px;
+    color: #444d56;
+    vertical-align: middle;
+    background-color: #fafbfc;
+    border: 1px solid #d1d5da;
+    border-radius: 3px;
+    box-shadow: inset 0 -1px 0 #d1d5da;
 }
 
 :global(.bp3-dark) .shortcut {
-  background-color: var(--background-2);
-  box-shadow: inset 0 -1px 0 var(--background);
-  border: 1px solid var(--background);
-  color: var(--text-primary);
+    background-color: var(--background-2);
+    box-shadow: inset 0 -1px 0 var(--background);
+    border: 1px solid var(--background);
+    color: var(--text-primary);
 }
